--- a/app/src/main/res/layout-land/activity_task1_detail_screen.xml
+++ b/app/src/main/res/layout-land/activity_task1_detail_screen.xml
@@ -8,35 +8,35 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="83dp"
-        android:layout_height="104dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_editor_absoluteX="50dp"
+        app:layout_constraintVertical_bias="0.215"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
         android:text="@string/profile_title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.032" />
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="50dp"
         android:layout_height="44dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="72dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.198"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
@@ -44,92 +44,94 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
         android:lines="4"
         android:maxLines="4"
         android:text="@string/profile_description"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.005"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.385" />
 
     <TextView
         android:id="@+id/natText"
         android:layout_width="70dp"
         android:layout_height="46dp"
-        android:layout_marginTop="376dp"
-        android:textAlignment="center"
+        android:layout_marginEnd="160dp"
         android:text="@string/zero"
-        app:layout_constraintEnd_toStartOf="@+id/fibText"
-        app:layout_constraintHorizontal_bias="0.544"
+        android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/fibText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:textSize="@dimen/counter_size"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="0.488" />
 
     <TextView
         android:id="@+id/fibText"
         android:layout_width="70dp"
         android:layout_height="46dp"
-        android:layout_marginTop="376dp"
-        android:layout_marginEnd="48dp"
-        android:textAlignment="center"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="64dp"
         android:text="@string/zero"
-        app:layout_constraintEnd_toStartOf="@+id/colText"
         android:textStyle="bold"
+        android:textAlignment="center"
         android:textSize="@dimen/counter_size"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/colText"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/colText"
         android:layout_width="70dp"
         android:layout_height="46dp"
-        android:layout_marginTop="376dp"
-        android:layout_marginEnd="52dp"
-        android:textAlignment="center"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="68dp"
         android:text="@string/zero"
         android:textStyle="bold"
         android:textSize="@dimen/counter_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/nat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
         android:onClick="onNatButtonClick"
         android:text="@string/natural"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fib"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/natText"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintBottom_toTopOf="@+id/fib"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/natText"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.488" />
 
     <Button
         android:id="@+id/fib"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginBottom="60dp"
         android:onClick="onFibButtonClick"
         android:text="@string/fibonacci"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/col"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/nat"
-        app:layout_constraintTop_toBottomOf="@+id/fibText"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintBottom_toTopOf="@+id/col"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.035"
+        app:layout_constraintStart_toEndOf="@+id/fibText" />
 
     <Button
         android:id="@+id/col"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginBottom="68dp"
         android:onClick="onColButtonClick"
         android:text="@string/collatz"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/fib"
-        app:layout_constraintTop_toBottomOf="@+id/colText"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/colText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
