--- a/app/src/main/res/layout/activity_task1.xml
+++ b/app/src/main/res/layout/activity_task1.xml
@@ -12,28 +12,42 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="20dp"
-            app:srcCompat="@android:drawable/sym_def_app_icon" />
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    app:srcCompat="@android:drawable/sym_def_app_icon" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    app:srcCompat="@android:drawable/sym_action_call" />
+            </FrameLayout>
 
             <ListView
-            android:id="@+id/task_list"
-            android:clickable="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="true" />
+                android:id="@+id/task_list"
+                android:layout_width="0dp"
+                android:layout_weight="6"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true" />
 
-    </LinearLayout>
+        </LinearLayout>
 
         <TextView
+            android:id="@+id/universityNameLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -41,12 +55,14 @@
             android:text="@string/itmo" />
 
         <EditText
+            android:id="@+id/universityNameSetText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="@string/edit_text_default" />
 
         <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -68,8 +84,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
-            android:onClick="onToAstButtonClick"
-            android:text="@string/to_ast" />
+            android:onClick="onToastButtonClick"
+            android:text="@string/toast" />
 
     </LinearLayout>
 
@@ -80,6 +96,7 @@
         android:layout_gravity="end|bottom"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="onFabButtonClick"
         app:srcCompat="@android:drawable/ic_input_add"
         tools:ignore="SpeakableTextPresentCheck" />
 
