--- a/app/src/main/res/layout/activity_task1.xml
+++ b/app/src/main/res/layout/activity_task1.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/mCoordinatorLayout"
     tools:context=".Task1Activity">
 
     <LinearLayout
@@ -59,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:text="@string/edit_text_default" />
+            android:hint="@string/edit_text_default" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switchColor"
